--- a/stormcenter.html
+++ b/stormcenter.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Here you will find some pictures from weather and different lanscape looks">
-    <link rel="shortcut icon" href="img7/favicon(1).ico">
+    <link rel="shortcut icon" href="img/favicon(1).ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link rel="stylesheet" href="css7/small.css">
-    <link rel="stylesheet" href="css7/medium.css">
-    <link rel="stylesheet" href="css7/large.css">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
     
   
-    <Script src="js7/windchill.js"></Script>
+    <Script src="js/windchill.js"></Script>
     <title>Preston Page, weather site give information every hour.</title>
     </head> 
     <body onload="getUpdate(), pancakeD()">
@@ -24,7 +24,7 @@
         <header class="headings">
            <section>
             <picture>
-                <img src="img7/iconfinder_sunset_3521354.png" alt="The sun and the clound">
+                <img src="img/iconfinder_sunset_3521354.png" alt="The sun and the clound">
             </picture>
             </section>
             <section class="">
@@ -125,7 +125,7 @@
         </footer>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
-    <script src="js7/lazyload.js" defer></script>
-    <script src="js7/preston-7.js"></script>
+    <script src="js/lazyload.js" defer></script>
+    <script src="js/preston-7.js"></script>
     </body>
 </html>
