--- a/stormcenter.html
+++ b/stormcenter.html
@@ -75,10 +75,12 @@
                         placeholder="###-###-####">
                         </label>
                         <br>
-                        <label for="num">* Zip Code:
-                            <input type="number" id="num" name="num" 
-                            pattern="(\d{5}([\-]\d{4})?)" 
-                            autocomplete="shipping postal-codep" placeholder="00000" require ></label><br>
+                        <label for="zipCode">Zip Code:
+                            <input type="number" 
+                            name="zipCode" 
+                            id="zipCode" 
+                            placeholder="00000"
+                            required></label>
         
                   </fieldset>
                
