--- a/stormcenter.html
+++ b/stormcenter.html
@@ -75,7 +75,7 @@
                         placeholder="###-###-####">
                         </label>
                         <br>
-                        <label for="zipCode">Zip Code:
+                        <label>* Zip Code:
                             <input type="number" 
                             name="zipCode" 
                             id="zipCode" 
