--- a/stormcenter.html
+++ b/stormcenter.html
@@ -64,7 +64,7 @@
                     <br>
                     <label>* Email: 
                     <input type="email" name="email" 
-                    requere placeholder="your@email.com"></label><br>
+                    require placeholder="your@email.com"></label><br>
         
                     <label>* Phone Number:
                       <input
